# app/Models/User.php
@@ -6,6 +6,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Illuminate\Support\Collection;
 use Laravel\Sanctum\HasApiTokens;
 
 class User extends Authenticatable
@@ -82,5 +83,59 @@ class User extends Authenticatable
     {
         return $this->morphedByMany(NewsAuthor::class, 'morph', 'news_preferences')
                     ->withPivot('news_feed_priority');
+    }
+
+    /**
+     * Get the articles for the user's news feed
+     */
+    public function articles(): Collection
+    {
+        $preferences = $this->preferences;
+        $allArticles = collect();
+
+        // Do 10 iterations
+        for ($iteration = 0; $iteration < 10; $iteration++) {
+            // For each preference ordered by priority
+            foreach ($preferences as $preference) {
+                $type = $preference->morph_type;
+                $id = $preference->morph_id;
+
+                $articles = collect();
+
+                // Get 3 articles with offset based on iteration
+                switch ($type) {
+                    case 'App\Models\NewsSource':
+                        $newsSource = NewsSource::find($id)->source;
+                        $articles = Article::select('id', 'title', 'content', 'created_at', 'updated_at')
+                            ->where('source', 'like', "%$newsSource%")
+                            ->limit(3)
+                            ->offset($iteration * 3)
+                            ->get();
+                        break;
+                    case 'App\Models\NewsCategory':
+                        $newsCategory = NewsCategory::find($id)->category;
+                        $articles = Article::$articles = Article::select('id', 'title', 'content', 'created_at', 'updated_at')
+                            ->where('category', 'like', "%$newsCategory%")
+                            ->limit(3)
+                            ->offset($iteration * 3)
+                            ->get();
+                        break;
+                    case 'App\Models\NewsAuthor':
+                        $newsAuthor = NewsAuthor::find($id);
+
+                        $articles = Article::$articles = Article::select('id', 'title', 'content', 'created_at', 'updated_at')
+                            ->where('author', 'like', "%$newsAuthor->first_name% $newsAuthor->last_name%")
+                            ->limit(3)
+                            ->offset($iteration * 3)
+                            ->get();
+                        break;
+                }
+
+                // Add to collection
+                $allArticles = $allArticles->concat($articles);
+            }
+        }
+
+        return $allArticles->unique('id')->values();
     }
 }
